Add more codec support

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	</p>
-	<iframe src="./inner.html" width=640 height=400></iframe>
+	<p>
+		<a href="./inner-mp4.html" target="inner">MP4</a>
+		<a href="./inner-webm.html" target="inner">WEBM</a>
+		<a href="./inner-ogv.html" target="inner">OGV (Remote)</a>
+	</p>
+	<iframe src="./inner-mp4.html" width=640 height=400 name="inner"></iframe>
 </body>
 </html>
