Use streaming addresses

--- a/inner-webm.html
+++ b/inner-webm.html
@@ -13,7 +13,7 @@
 	<div id="log">
 	</div>
 	<video id="the-player" controls preload="auto" width="600" height="320">
-		<source type="video/webm" src="./oceans-clip.webm"></source>
+		<source type="video/webm" src="http://video-js.zencoder.com/oceans-clip.webm"></source>
 	</video>
 	<script src="./inner.js" />
 </body>
