--- a/inner-mp4.html
+++ b/inner-mp4.html
@@ -13,7 +13,7 @@
 	<div id="log">
 	</div>
 	<video id="the-player" controls preload="auto" width="600" height="320">
-		<source type="video/mp4" src="./oceans-clip.mp4"></source>
+		<source type="video/mp4" src="http://video-js.zencoder.com/oceans-clip.mp4"></source>
 	</video>
 	<script src="./inner.js" />
 </body>
