All change to remote

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<p>
 		<a href="./inner-mp4.html" target="inner">MP4</a>
 		<a href="./inner-webm.html" target="inner">WEBM</a>
-		<a href="./inner-ogv.html" target="inner">OGV (Remote)</a>
+		<a href="./inner-ogv.html" target="inner">OGV</a>
 	</p>
 	<iframe src="./inner-mp4.html" width=640 height=400 name="inner"></iframe>
 </body>
