Correct HTML problems

--- a/inner-ogv.html
+++ b/inner-ogv.html
@@ -13,8 +13,8 @@
 	<div id="log">
 	</div>
 	<video id="the-player" controls preload="auto" width="600" height="320">
-		<source type="video/ogv" src="http://video-js.zencoder.com/oceans-clip.ogv">
+		<source type="video/ogv" src="http://video-js.zencoder.com/oceans-clip.ogv"></source>
 	</video>
-	<script src="./inner.js" />
+	<script src="inner.js"></script>
 </body>
 </html>
