--- a/inner-mp4.html
+++ b/inner-mp4.html
@@ -15,6 +15,6 @@
 	<video id="the-player" controls preload="auto" width="600" height="320">
 		<source type="video/mp4" src="http://video-js.zencoder.com/oceans-clip.mp4"></source>
 	</video>
-	<script src="./inner.js" />
+	<script src="inner.js"></script>
 </body>
 </html>
